--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -117,6 +117,14 @@
     <Compile Include="Migrations\201610200810386_007.Designer.cs">
       <DependentUpon>201610200810386_007.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201610210815204_008.cs" />
+    <Compile Include="Migrations\201610210815204_008.Designer.cs">
+      <DependentUpon>201610210815204_008.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201610210850338_009.cs" />
+    <Compile Include="Migrations\201610210850338_009.Designer.cs">
+      <DependentUpon>201610210850338_009.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -155,6 +163,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610200810386_007.resx">
       <DependentUpon>201610200810386_007.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610210815204_008.resx">
+      <DependentUpon>201610210815204_008.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201610210850338_009.resx">
+      <DependentUpon>201610210850338_009.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
