module [InvestmentDecision] process coding and layout setting

--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -497,6 +497,9 @@
     <Content Include="LayoutXml\FrmDeliveryImport_Account_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="LayoutXml\FrmIDVoteResult_Default.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="LayoutXml\FrmInvestmentDecisionManage_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
