--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -385,17 +385,23 @@
     <Compile Include="UI\InvestmentDecision\FrmInvestmentDecisionManage.Designer.cs">
       <DependentUpon>FrmInvestmentDecisionManage.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecast.cs">
+    <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecast.Designer.cs">
-      <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
+    <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.Designer.cs">
+      <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\InvestmentDecision\_dialogIDVoteResult.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\InvestmentDecision\_dialogIDVoteResult.Designer.cs">
       <DependentUpon>_dialogIDVoteResult.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\_dialogMarketTrendForecast.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\_dialogMarketTrendForecast.Designer.cs">
+      <DependentUpon>_dialogMarketTrendForecast.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\InvestmentDecision\_dialogTradeApplication.cs">
       <SubType>Form</SubType>
@@ -617,11 +623,14 @@
     <EmbeddedResource Include="UI\InvestmentDecision\FrmInvestmentDecisionManage.resx">
       <DependentUpon>FrmInvestmentDecisionManage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\InvestmentDecision\FrmMarketTrendForecast.resx">
-      <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
+    <EmbeddedResource Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.resx">
+      <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\_dialogIDVoteResult.resx">
       <DependentUpon>_dialogIDVoteResult.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\InvestmentDecision\_dialogMarketTrendForecast.resx">
+      <DependentUpon>_dialogMarketTrendForecast.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\_dialogTradeApplication.resx">
       <DependentUpon>_dialogTradeApplication.cs</DependentUpon>
