[shit] no description

--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -72,7 +72,8 @@
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionForm.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionStockPool.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionVote.cs" />
-    <Compile Include="Domain\InvestmentDecision\MarketTrendForecast.cs" />
+    <Compile Include="Domain\InvestmentDecision\MarketTrendForecastDetail.cs" />
+    <Compile Include="Domain\InvestmentDecision\MarketTrendForecastInfo.cs" />
     <Compile Include="Util\AppConfigHelper.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Util\CommonHelper.cs" />
