--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -391,6 +391,12 @@
     <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.Designer.cs">
       <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\InvestmentDecision\_dialogCloseStockAnalysis.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\_dialogCloseStockAnalysis.Designer.cs">
+      <DependentUpon>_dialogCloseStockAnalysis.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\InvestmentDecision\_dialogIDVoteResult.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -626,6 +632,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.resx">
       <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\InvestmentDecision\_dialogCloseStockAnalysis.resx">
+      <DependentUpon>_dialogCloseStockAnalysis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\_dialogIDVoteResult.resx">
       <DependentUpon>_dialogIDVoteResult.cs</DependentUpon>
