--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -379,6 +379,12 @@
     <Compile Include="UI\InvestmentDecision\FrmCloseStockAnalysis.Designer.cs">
       <DependentUpon>FrmCloseStockAnalysis.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\InvestmentDecision\FrmIDCommittee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\FrmIDCommittee.Designer.cs">
+      <DependentUpon>FrmIDCommittee.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\InvestmentDecision\FrmInvestmentDecisionManage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -390,6 +396,12 @@
     </Compile>
     <Compile Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.Designer.cs">
       <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\FrmIDStockPool.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\InvestmentDecision\FrmIDStockPool.Designer.cs">
+      <DependentUpon>FrmIDStockPool.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\InvestmentDecision\_dialogCloseStockAnalysis.cs">
       <SubType>Form</SubType>
@@ -627,11 +639,17 @@
     <EmbeddedResource Include="UI\InvestmentDecision\FrmCloseStockAnalysis.resx">
       <DependentUpon>FrmCloseStockAnalysis.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\InvestmentDecision\FrmIDCommittee.resx">
+      <DependentUpon>FrmIDCommittee.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\FrmInvestmentDecisionManage.resx">
       <DependentUpon>FrmInvestmentDecisionManage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\FrmMarketTrendForecastManage.resx">
       <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\InvestmentDecision\FrmIDStockPool.resx">
+      <DependentUpon>FrmIDStockPool.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\InvestmentDecision\_dialogCloseStockAnalysis.resx">
       <DependentUpon>_dialogCloseStockAnalysis.cs</DependentUpon>
