--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -66,7 +66,9 @@
     <Compile Include="Mapping\Account\AccountInfoMap.cs" />
     <Compile Include="Mapping\Account\AccountInitialFundMap.cs" />
     <Compile Include="Mapping\Account\AccountOperatorMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisDetailMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\CloseStockAnalysisDetailMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisInfoMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\CloseStockAnalysisInfoMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionCommitteeMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionFormMap.cs" />
@@ -142,6 +144,10 @@
     <Compile Include="Migrations\201610270808134_012.Designer.cs">
       <DependentUpon>201610270808134_012.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611010618503_013.cs" />
+    <Compile Include="Migrations\201611010618503_013.Designer.cs">
+      <DependentUpon>201611010618503_013.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610270808134_012.resx">
       <DependentUpon>201610270808134_012.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611010618503_013.resx">
+      <DependentUpon>201611010618503_013.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
