--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -68,9 +68,7 @@
     <Compile Include="Mapping\Account\AccountOperatorMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisSummaryMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisDetailMap.cs" />
-    <Compile Include="Mapping\InvestmentDecision\CloseStockAnalysisDetailMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisInfoMap.cs" />
-    <Compile Include="Mapping\InvestmentDecision\CloseStockAnalysisInfoMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionCommitteeMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionFormMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionStockPoolMap.cs" />
@@ -153,6 +151,10 @@
     <Compile Include="Migrations\201611020221120_014.Designer.cs">
       <DependentUpon>201611020221120_014.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611030652046_015.cs" />
+    <Compile Include="Migrations\201611030652046_015.Designer.cs">
+      <DependentUpon>201611030652046_015.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -212,6 +214,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611020221120_014.resx">
       <DependentUpon>201611020221120_014.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611030652046_015.resx">
+      <DependentUpon>201611030652046_015.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
