--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -155,6 +155,18 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\InvestmentDecision\FrmMarketTrendForecast.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\FrmMarketTrendForecast.Designer.cs">
+      <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogMTFEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogMTFEdit.Designer.cs">
+      <DependentUpon>_dialogMTFEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\StatisticsReport\UserInvestIncomeAccountModel.cs" />
     <Compile Include="Models\StatisticsReport\StockInvestIncomeSummaryModel.cs" />
     <Compile Include="Models\StatisticsReport\UserInvestIncomeRankingModel.cs" />
@@ -379,17 +391,11 @@
     <Compile Include="Forms\DailyTrading\StatisticsReport\FrmUserInvestIncomRetracement.Designer.cs">
       <DependentUpon>FrmUserInvestIncomRetracement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmIDPositionStockAnalysis.cs">
+    <Compile Include="Forms\InvestmentDecision\FrmPositionStockAnalysis.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmIDPositionStockAnalysis.Designer.cs">
-      <DependentUpon>FrmIDPositionStockAnalysis.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmCloseStockAnalysis.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmCloseStockAnalysis.Designer.cs">
-      <DependentUpon>FrmCloseStockAnalysis.cs</DependentUpon>
+    <Compile Include="Forms\InvestmentDecision\FrmPositionStockAnalysis.Designer.cs">
+      <DependentUpon>FrmPositionStockAnalysis.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Admin\BaseData\FrmIDCommittee.cs">
       <SubType>Form</SubType>
@@ -403,12 +409,6 @@
     <Compile Include="Forms\InvestmentDecision\FrmInvestmentDecisionManage.Designer.cs">
       <DependentUpon>FrmInvestmentDecisionManage.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmMarketTrendForecastManage.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\FrmMarketTrendForecastManage.Designer.cs">
-      <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\Admin\BaseData\FrmIDStockPool.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -421,23 +421,11 @@
     <Compile Include="Forms\InvestmentDecision\_dialogPSAEdit.Designer.cs">
       <DependentUpon>_dialogPSAEdit.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogCloseStockAnalysis.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogCloseStockAnalysis.Designer.cs">
-      <DependentUpon>_dialogCloseStockAnalysis.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogIDVoteResult.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogIDVoteResult.Designer.cs">
       <DependentUpon>_dialogIDVoteResult.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogMarketTrendForecast.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\InvestmentDecision\_dialogMarketTrendForecast.Designer.cs">
-      <DependentUpon>_dialogMarketTrendForecast.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogPSAResult.cs">
       <SubType>Form</SubType>
@@ -564,6 +552,12 @@
     <Content Include="LayoutXml\_dialogVirtualRecord_Default.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Forms\InvestmentDecision\FrmMarketTrendForecast.resx">
+      <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogMTFEdit.resx">
+      <DependentUpon>_dialogMTFEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Forms\Accounting\AccountManage\FrmAccountFundMonthlyStatements.resx">
       <DependentUpon>FrmAccountFundMonthlyStatements.cs</DependentUpon>
@@ -664,11 +658,8 @@
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmUserInvestIncomRetracement.resx">
       <DependentUpon>FrmUserInvestIncomRetracement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\FrmIDPositionStockAnalysis.resx">
-      <DependentUpon>FrmIDPositionStockAnalysis.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\FrmCloseStockAnalysis.resx">
-      <DependentUpon>FrmCloseStockAnalysis.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\InvestmentDecision\FrmPositionStockAnalysis.resx">
+      <DependentUpon>FrmPositionStockAnalysis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\BaseData\FrmIDCommittee.resx">
       <DependentUpon>FrmIDCommittee.cs</DependentUpon>
@@ -676,23 +667,14 @@
     <EmbeddedResource Include="Forms\InvestmentDecision\FrmInvestmentDecisionManage.resx">
       <DependentUpon>FrmInvestmentDecisionManage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\FrmMarketTrendForecastManage.resx">
-      <DependentUpon>FrmMarketTrendForecastManage.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Admin\BaseData\FrmIDStockPool.resx">
       <DependentUpon>FrmIDStockPool.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogPSAEdit.resx">
       <DependentUpon>_dialogPSAEdit.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogCloseStockAnalysis.resx">
-      <DependentUpon>_dialogCloseStockAnalysis.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDVoteResult.resx">
       <DependentUpon>_dialogIDVoteResult.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogMarketTrendForecast.resx">
-      <DependentUpon>_dialogMarketTrendForecast.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogPSAResult.resx">
       <DependentUpon>_dialogPSAResult.cs</DependentUpon>
