--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -69,6 +69,8 @@
   <ItemGroup>
     <Compile Include="BooleanFormatter.cs" />
     <Compile Include="Domain\Account\AccountInitialFund.cs" />
+    <Compile Include="Domain\InvestmentDecision\DecisionReasonCategory.cs" />
+    <Compile Include="Domain\InvestmentDecision\DecisionReasonContent.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionCommittee.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionForm.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionStockPool.cs" />
