--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Mapping\Account\AccountInfoMap.cs" />
     <Compile Include="Mapping\Account\AccountInitialFundMap.cs" />
     <Compile Include="Mapping\Account\AccountOperatorMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\DecisionReasonCategoryMap.cs" />
+    <Compile Include="Mapping\InvestmentDecision\DecisionReasonContentMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisSummaryMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisDetailMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\PositionStockAnalysisInfoMap.cs" />
@@ -155,6 +157,10 @@
     <Compile Include="Migrations\201611030652046_015.Designer.cs">
       <DependentUpon>201611030652046_015.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611070549402_016.cs" />
+    <Compile Include="Migrations\201611070549402_016.Designer.cs">
+      <DependentUpon>201611070549402_016.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -217,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611030652046_015.resx">
       <DependentUpon>201611030652046_015.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611070549402_016.resx">
+      <DependentUpon>201611070549402_016.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
