--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -179,6 +179,12 @@
     <Compile Include="Forms\InvestmentDecision\FrmMarketTrendForecast.Designer.cs">
       <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIDAccuracyVoteResult.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIDAccuracyVoteResult.Designer.cs">
+      <DependentUpon>_dialogIDAccuracyVoteResult.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogMTFEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -582,6 +588,9 @@
     <EmbeddedResource Include="Forms\InvestmentDecision\FrmMarketTrendForecast.resx">
       <DependentUpon>FrmMarketTrendForecast.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDAccuracyVoteResult.resx">
+      <DependentUpon>_dialogIDAccuracyVoteResult.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\_dialogMTFEdit.resx">
       <DependentUpon>_dialogMTFEdit.cs</DependentUpon>
     </EmbeddedResource>
@@ -714,6 +723,7 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
