--- a/src/Presentation/CTM.Win/app.config
+++ b/src/Presentation/CTM.Win/app.config
@@ -42,6 +42,8 @@
     <add key="MarginTradingAPR" value="0.08" />
     <!-- 利息年核算天数 -->
     <add key="YearlyAccountingDayNumber" value="360" />
+    <!-- 交易记录历史查询月数 -->
+    <add key="TradeRecordHistoryQueryMonth" value ="1"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
 </configuration>
