--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Mapping\InvestmentDecision\InvestmentDecisionVoteMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\MarketTrendForecastDetailMap.cs" />
     <Compile Include="Mapping\InvestmentDecision\MarketTrendForecastInfoMap.cs" />
+    <Compile Include="Mapping\Log\LoginLogMap.cs" />
     <Compile Include="Mapping\MarginTrading\MarginTradingInfoMap.cs" />
     <Compile Include="Mapping\Stock\StockPoolLogMap.cs" />
     <Compile Include="Mapping\Stock\StockTransferInfoMap.cs" />
@@ -165,6 +166,10 @@
     <Compile Include="Migrations\201611080156171_017.Designer.cs">
       <DependentUpon>201611080156171_017.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611150227534_018.cs" />
+    <Compile Include="Migrations\201611150227534_018.Designer.cs">
+      <DependentUpon>201611150227534_018.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -234,7 +239,11 @@
     <EmbeddedResource Include="Migrations\201611080156171_017.resx">
       <DependentUpon>201611080156171_017.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611150227534_018.resx">
+      <DependentUpon>201611150227534_018.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
