--- a/src/Libraries/CTM.Core/CTM.Core.csproj
+++ b/src/Libraries/CTM.Core/CTM.Core.csproj
@@ -71,10 +71,15 @@
     <Compile Include="Domain\Account\AccountInitialFund.cs" />
     <Compile Include="Domain\InvestmentDecision\DecisionReasonCategory.cs" />
     <Compile Include="Domain\InvestmentDecision\DecisionReasonContent.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionAccuracy.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionApplication.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionCommittee.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionForm.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionOperation.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionStockPool.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionTradeRecord.cs" />
     <Compile Include="Domain\InvestmentDecision\InvestmentDecisionVote.cs" />
+    <Compile Include="Domain\InvestmentDecision\InvestmentDecisionVoteNew.cs" />
     <Compile Include="Domain\InvestmentDecision\MarketTrendForecastDetail.cs" />
     <Compile Include="Domain\InvestmentDecision\MarketTrendForecastInfo.cs" />
     <Compile Include="Domain\InvestmentDecision\PositionStockAnalysisSummary.cs" />
