--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -76,8 +76,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="Autofac, Version=4.2.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.4.2.0\lib\net45\Autofac.dll</HintPath>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="DevExpress.BonusSkins.v15.2" />
@@ -155,6 +155,7 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CustomControl\TreeListComboBox.cs" />
     <Compile Include="Forms\Accounting\DataManage\_dialogTradeDataContrast.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +167,12 @@
     </Compile>
     <Compile Include="Forms\Admin\BaseData\FrmIDReason.Designer.cs">
       <DependentUpon>FrmIDReason.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.Designer.cs">
+      <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\DailyTrading\DataManage\FrmStockTransfer.cs">
       <SubType>Form</SubType>
@@ -601,6 +608,9 @@
     <EmbeddedResource Include="Forms\Admin\BaseData\FrmIDReason.resx">
       <DependentUpon>FrmIDReason.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Admin\BaseData\_dialogIDReasonContentEdit.resx">
+      <DependentUpon>_dialogIDReasonContentEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\DataManage\FrmStockTransfer.resx">
       <DependentUpon>FrmStockTransfer.cs</DependentUpon>
     </EmbeddedResource>
@@ -968,7 +978,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CustomControl\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
