--- a/src/Presentation/CTM.Win/CTM.Win.csproj
+++ b/src/Presentation/CTM.Win/CTM.Win.csproj
@@ -155,7 +155,6 @@
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CustomControl\TreeListComboBox.cs" />
     <Compile Include="Forms\Accounting\DataManage\_dialogTradeDataContrast.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +191,12 @@
     <Compile Include="Forms\DailyTrading\StatisticsReport\FrmStockPositionQuery.Designer.cs">
       <DependentUpon>FrmStockPositionQuery.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedIDApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_embedIDApplication.Designer.cs">
+      <DependentUpon>_embedIDApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\InvestmentDecision\FrmStockInvestmentDecision.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +220,12 @@
     </Compile>
     <Compile Include="Forms\InvestmentDecision\_dialogMTFEdit.Designer.cs">
       <DependentUpon>_dialogMTFEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIDApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InvestmentDecision\_dialogIDApplication.Designer.cs">
+      <DependentUpon>_dialogIDApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\StatisticsReport\UserInvestIncomeAccountModel.cs" />
     <Compile Include="Models\StatisticsReport\StockInvestIncomeSummaryModel.cs" />
@@ -621,6 +632,9 @@
     <EmbeddedResource Include="Forms\DailyTrading\StatisticsReport\FrmStockPositionQuery.resx">
       <DependentUpon>FrmStockPositionQuery.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_embedIDApplication.resx">
+      <DependentUpon>_embedIDApplication.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvestmentDecision\FrmStockInvestmentDecision.resx">
       <DependentUpon>FrmStockInvestmentDecision.cs</DependentUpon>
     </EmbeddedResource>
@@ -713,6 +727,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\DailyTrading\DataManage\_dialogVirtualRecord.resx">
       <DependentUpon>_dialogVirtualRecord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvestmentDecision\_dialogIDApplication.resx">
+      <DependentUpon>_dialogIDApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MarginTrading\FrmUserMarginTrading.resx">
       <DependentUpon>FrmUserMarginTrading.cs</DependentUpon>
@@ -979,6 +996,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="CustomControl\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
