--- a/src/Libraries/CTM.Data/CTM.Data.csproj
+++ b/src/Libraries/CTM.Data/CTM.Data.csproj
@@ -183,6 +183,14 @@
     <Compile Include="Migrations\201612070128420_020.Designer.cs">
       <DependentUpon>201612070128420_020.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612080325015_021.cs" />
+    <Compile Include="Migrations\201612080325015_021.Designer.cs">
+      <DependentUpon>201612080325015_021.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612080519422_022.cs" />
+    <Compile Include="Migrations\201612080519422_022.Designer.cs">
+      <DependentUpon>201612080519422_022.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlHelper.cs" />
@@ -260,6 +268,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612070128420_020.resx">
       <DependentUpon>201612070128420_020.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612080325015_021.resx">
+      <DependentUpon>201612080325015_021.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612080519422_022.resx">
+      <DependentUpon>201612080519422_022.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
